<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main6Activity">

    <EditText
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="Enter First Number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:ems="10"
        android:hint="Enter Second Number"
        android:inputType="textPersonName"
        android:text="@string/Second"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/first"
        app:layout_constraintTop_toBottomOf="@+id/first" />

    <Button
        android:id="@+id/button"
        android:layout_width="123dp"
        android:layout_height="64dp"
        android:layout_marginBottom="52dp"
        android:onClick="cal"
        android:text="@string/Click_To_Divide"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second" />

    <TextView
        android:id="@+id/result"
        android:layout_width="189dp"
        android:layout_height="148dp"
        android:layout_marginTop="463dp"
        android:layout_marginBottom="120dp"
        android:text="@string/result"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>